# vikunja-mcp

./: .gitignore  .mcp.json  .vikunja-mcp.toml  CLAUDE.md  LICENSE  README.md  opencode.json  pyproject.toml  skills
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-12-cross-project-file-task.md
docs/superpowers/specs/: 2026-07-08-bug-review-push-and-verdict-labels-design.md
scripts/: bump_version.py
src/vikunja_mcp/: api.py  claimable_cmd.py  config.py  formatting.py  notify.py  server.py  setup_cmd.py  workflow.py
src/vikunja_mcp/skills/tracker/: SKILL.md
tests/integration/: conftest.py  test_agent_flow.py  test_cross_project.py  test_epic_marker.py  test_sequence_gate.py  test_setup_flow.py
tests/unit/: conftest.py  fakes.py  test_api.py  test_api_kanban.py  test_api_labels.py  test_bump_version.py  test_claimable_cmd.py  test_config.py  test_fakes.py  test_formatting.py  test_install_skill.py  test_notify.py  test_self_heal.py  test_server.py  test_setup.py  test_skill_contract.py  test_workflow_claim.py  test_workflow_epic_marker.py  test_workflow_epic_skip.py  test_workflow_gates.py  test_workflow_sequence_gate.py
