[project]
name = "vikunja-mcp"
version = "0.2.25"
description = "Workflow-level MCP server for Vikunja: queue -> claim -> design -> build -> review with enforced gates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mcp>=1.2", "httpx>=0.27"]

[project.scripts]
vikunja-mcp = "vikunja_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vikunja_mcp"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
